# keygenerator

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  go.mod  main.go
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: action-smoke.yml  ci.yml  cli-ci.yml  codeql.yml  goreleaser.yaml  mcp-ci.yml  python-ci.yml  release.yml  rust-crate-ci.yml  trivy.yml  web-deploy.yml
cli/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: install.ts  platform.ts  run.ts  verify.ts
cmd/keygenerator/: apikey.go  apikey_test.go  entropy.go  entropy_test.go  main.go  passphrase.go  passphrase_test.go  pin.go  pin_test.go  root.go  root_test.go  runner.go  secret.go  secret_test.go  version.go
cmd/secretgenerator/: apikey.go  entropy.go  entropy_test.go  exit.go  helpjson.go  helpjson_test.go  main.go  passphrase.go  passphrase_test.go  pin.go  pin_test.go  root.go  root_test.go  runner.go  runner_test.go  secret.go  secret_test.go
docs/: AUDIT.md  CRYPTO.md  SCHEMA.md  SUBCOMMANDS.md
examples/: README.md
examples/bash/: generate.sh
examples/go/: main.go
examples/node/: generate.mjs
examples/python/: generate.py
examples/ruby/: generate.rb
examples/rust/: Cargo.toml
internal/audit/: errors.go  errors_test.go  log.go  log_test.go  schema.go  uuid.go  uuid_test.go
internal/charset/: charset.go  charset_test.go  fuzz_test.go  registry.go
internal/generator/: generator.go  generator_test.go  stats_test.go
internal/policy/: cracktime.go  cracktime_test.go  entropy.go  entropy_test.go  fuzz_test.go  weakpins.go  weakpins_test.go
internal/words/: eff_large.go  eff_large_test.go  words.go
mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mcp/scripts/: copy-wasm.mjs
mcp/src/: index.ts  smoke.ts  wasm.ts
pkg/keygen/: doc.go  example_test.go  keygen.go  keygen_test.go
pkg/secretgen/: doc.go  example_test.go  secretgen.go  secretgen_test.go
python/: README.md  pyproject.toml
python/src/secretgenerator/: api.py
python/src/secretgenerator_py/: __init__.py
python/tests/: test_api.py
rust-crate/: Cargo.toml  README.md
rust-crate/examples/: quickstart.rs
rust-crate/src/: lib.rs
schemas/: output-v1.json
test/e2e/: e2e_test.go
web/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/public/: CNAME
web/scripts/: build-llms-txt.mjs  build-og-image.mjs  build-releases-rss.mjs
(+12 files in other folders)
