[package]
name = "secretgenerator"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
description = "Auditable random credential generator for AI agents and machine-readable pipelines (wraps the secretgenerator CLI)."
license = "MIT"
homepage = "https://secretgenerator.org"
documentation = "https://docs.rs/secretgenerator"
repository = "https://github.com/rafaelperoco/secretgenerator"
readme = "README.md"
keywords = ["secret", "password", "csprng", "auditable", "sigstore"]
categories = ["cryptography", "command-line-utilities", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# none — we exercise the library against a real CLI in CI.

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
